fixed auth0 alignment

--- a/app/components/Navbar/Navbar.module.css
+++ b/app/components/Navbar/Navbar.module.css
@@ -19,11 +19,11 @@
 	padding: 20px;
 	text-align: center;
 
-	background-color: black;
+	background-color: white;
 	box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.6);
 
 	font-size: 20px;
-	color: white;
+	color: darkgray;
 
 	border: none;
 
@@ -43,11 +43,17 @@
 .handle {
 	position: relative;
 	bottom: 49px;
-	background-color: black;
+	background-color: white;
 	width: 25vw;
+	left: 4.5rem;
 	border: none;
 	border-top-left-radius: 10px;
 	border-top-right-radius: 10px;
+}
+
+.loginLink {
+	position: relative;
+	right: 6.5rem;
 }
 
 .filled-green {
